fixed the score alignment

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -48,6 +48,7 @@
   display: flex;
   margin: 40px auto;
   text-align: center;
+  justify-content: center;
 }
 
 #score label {
